<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cosmic_latte"
            android:orientation="vertical"
            android:layout_weight="0">

            <TextView
                android:id="@+id/CategoryName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_green"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/category_name_place_holder_category_landing_page"
                android:fontFamily="serif"
                android:textColor="@color/dark_brown"
                android:textSize="30sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/top_and_bottom_border"
            android:orientation="vertical"
            android:layout_weight="0"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/CourseID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/course_id_hint_for_add_a_course_text_box"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:layout_margin="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="@drawable/edit_text_with_thick_border"
                    tools:ignore="Autofill,TextFields" />

                <EditText
                    android:id="@+id/CourseName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/course_name_hint_for_add_a_course_text_box"
                    android:layout_weight="1.5"
                    android:textSize="18sp"
                    android:layout_margin="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="@drawable/edit_text_with_thick_border"
                    tools:ignore="Autofill,RtlSymmetry,TextFields" />

                <EditText
                    android:id="@+id/CourseCreditHours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_with_thick_border"
                    android:hint="@string/credit_hours_hint_for_add_a_course_text_box"
                    android:layout_weight="0"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:inputType="number"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_margin="10dp"
                    tools:ignore="Autofill" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/CourseDescription"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_with_thick_border"
                    android:hint="@string/description_hint_for_add_a_course_text_box"
                    android:inputType="textImeMultiLine"
                    android:lines="8"
                    android:minLines="2"
                    android:gravity="top|start"
                    android:maxLines="10"
                    android:scrollbars="vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:textSize="18sp"
                    tools:ignore="Autofill" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/courseDegree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_with_thick_border"
                    android:gravity="center_vertical"
                    android:hint="@string/select_degree_s_hint_for_add_course_text_box"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_weight="1"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_margin="10dp"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/TuitionFee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_with_thick_border"
                    android:layout_weight="0.5"
                    android:hint="@string/tuition_fee_hint_for_add_a_course_text_box"
                    android:inputType="numberDecimal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_margin="10dp"
                    tools:ignore="Autofill" />


                <Button
                    android:id="@+id/AddCourse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="buttonAddCourse"
                    android:text="@string/add_course_btn_text_for_category_landing_page"
                    android:textAllCaps="false"
                    android:layout_margin="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:layout_weight="1"
                    android:textSize="18sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/DeleteCourseID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_with_thick_border"
                    android:hint="@string/course_id_for_delete_a_course_text_box"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_margin="10dp"
                    tools:ignore="Autofill" />

                <Button
                    android:id="@+id/DeleteCourseButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_margin="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="18sp"
                    android:onClick="buttonDeleteCourse"
                    android:text="@string/delete_course_button_text_for_category_landing_page"
                    android:textAllCaps="false" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/cosmic_latte"
            android:layout_weight="1">
            <ListView
                android:id="@+id/coursesList"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <EditText
            android:id="@+id/autofocusDummy"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:inputType="text"
            tools:ignore="Autofill,TouchTargetSizeCheck">
            <requestFocus />
        </EditText>

</LinearLayout>