<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cosmic_latte"
            android:orientation="vertical"
            android:layout_weight="0">

            <TextView
                android:id="@+id/CourseName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_green"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/course_title_place_holder_for_add_a_section_page"
                android:fontFamily="serif"
                android:textColor="@color/dark_brown"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_green"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/course_description_place_holder_for_add_a_section_page"
                android:fontFamily="serif"
                android:textColor="@color/dark_brown"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/top_and_bottom_border"
            android:orientation="vertical"
            android:layout_weight="0"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/Instructor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_for_instructor_text_box_in_add_a_section_page"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:layout_margin="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="@drawable/edit_text_with_thick_border"
                    tools:ignore="Autofill,TextFields" />

                <EditText
                    android:id="@+id/Location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_for_location_text_box_in_add_a_section_page"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:layout_margin="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="@drawable/edit_text_with_thick_border"
                    tools:ignore="Autofill,TextFields" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/section_time_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:textSize="18sp"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/edit_text_with_thick_border"
                    android:hint="@string/section_time_picker_hint_in_add_a_section_page" />


                <TextView
                    android:id="@+id/Days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_for_days_text_box_in_add_a_section_page"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:layout_margin="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="@drawable/edit_text_with_thick_border"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/SectionID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_for_section_id_text_box_in_add_a_section_page"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_margin="10dp"
                    android:inputType="text"
                    android:background="@drawable/edit_text_with_thick_border"
                    tools:ignore="Autofill" />

                <EditText
                    android:id="@+id/CAP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_for_capacity_text_box_in_add_a_section_page"
                    android:layout_weight="0.5"
                    android:textSize="18sp"
                    android:layout_margin="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:inputType="number"
                    android:background="@drawable/edit_text_with_thick_border"
                    tools:ignore="Autofill" />

                <Button
                    android:id="@+id/AddSection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_for_add_a_section_button_in_admin_side"
                    android:onClick="buttonAddSection"
                    android:layout_weight="0.5"
                    android:textAllCaps="false"
                    android:layout_margin="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/DelSection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:onClick="buttonDeleteSec"
                    android:text="@string/text_for_delete_section_button_in_admin_side"
                    android:textAllCaps="false"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_margin="10dp"/>

                <EditText
                    android:id="@+id/DelSecID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_for_delete_section_id_text_box_in_add_a_section_page"
                    android:inputType="text"
                    android:layout_margin="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:background="@drawable/edit_text_with_thick_border"
                    tools:ignore="Autofill" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/cosmic_latte"
            android:layout_weight="1">
            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/sectionsList"
                android:dividerHeight="1dp" />
        </LinearLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/autofocusDummy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:inputType="text"
        tools:ignore="Autofill,TouchTargetSizeCheck">
        <requestFocus />
    </EditText>

</LinearLayout>